Refactor README.md to enhance project description and expand demo scenarios
- Updated project title and overview to focus on GitHub Copilot Chat capabilities.
- Expanded the number of scenarios from 3 to 8, detailing each scenario's problem, demo focus, and features.
- Improved clarity and structure of usage examples and demo commands.
- Enhanced architectural and project structure sections for better understanding.
- Added comprehensive testing strategies and categories for improved quality assurance.
- Included detailed instructions for adding new data sources and processing strategies.
- Updated demo execution support and configuration sections for better usability.
- Enhanced community and usage guidelines for educational and commercial purposes.